# gerenciador_de_senhas

./: .gitignore  README.md  pyproject.toml
db/: Senhas.txt
key/: chave.key
src/: password_views.py  passwords.py  template.py
src/settings/: settings.py
