[tool.poetry]
name = "gerenciador-de-senhas"
version = "0.1.0"
description = "Simples gerenciador de senhas"
authors = ["Gustavo Zequim Maldonado"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
